# AMR

./: .gitignore  README.md  streamlit_app.py
.devcontainer/: devcontainer.json
arduino/src/: main.ino
arduino/src/include/: Encoder.h  MotorDriver.h
docs/: estructura.md
raspberry/: .pylintrc  main.py  pyproject.toml  requirements.txt
raspberry/robot/comm/: arduino_serial.py
raspberry/robot/dashboard/: __init__.py  app.py
raspberry/robot/navigation/: navigator.py
raspberry/robot/sensors/: lidar.py
raspberry/stubs/: streamlit.pyi
